--- a/firmware/MUSIA/VisualGDB/MUSIA.vcxproj
+++ b/firmware/MUSIA/VisualGDB/MUSIA.vcxproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Release|VisualGDB'">
     <MCUPropertyListFile>$(ProjectDir)stm32.props</MCUPropertyListFile>
+    <GenerateHexFile>true</GenerateHexFile>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -80,7 +81,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug-072|VisualGDB'">
     <ClCompile>
       <AdditionalIncludeDirectories>..;../EEPROM;../CubeMX/Inc;../USB;../USB/Device;../USB/Interfaces;../USB/Lib/Inc;../USB/XPD;%(ClCompile.AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>DEBUG=1;DEBUG_DEFAULT_INTERRUPT_HANDLERS=1;STM32F072;%(ClCompile.PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>DEBUG=1;DEBUG_DEFAULT_INTERRUPT_HANDLERS=1;%(ClCompile.PreprocessorDefinitions)</PreprocessorDefinitions>
       <ForcedIncludeFiles>..\retarget.h</ForcedIncludeFiles>
       <AdditionalOptions>
       </AdditionalOptions>
@@ -107,7 +108,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|VisualGDB'">
     <ClCompile>
       <AdditionalIncludeDirectories>..;../EEPROM;../CubeMX/Inc;../USB;../USB/Device;../USB/Interfaces;../USB/Lib/Inc;../USB/XPD;%(ClCompile.AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>NDEBUG=1;RELEASE=1;STM32_TARGET_HEADER=;FLASH_APP_ADDRESS=0x08002000;FLASH_APP_SIZE=24568;FLASH_BYTE_PROGRAM_TIME_us=30;FLASH_ERASE_TIME_ms=480;FLASH_TOTAL_ERASE_TIME_ms=480;USBD_VID=0x1209;USBD_PID=0x8844;USBD_DFU_ST_EXTENSION=1;VDD_VALUE_mV=3300;SE_FLASH_DESC_STR="MUSIA Bootloader";%(ClCompile.PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG=1;RELEASE=1;%(ClCompile.PreprocessorDefinitions)</PreprocessorDefinitions>
       <ForcedIncludeFiles>..\retarget.h</ForcedIncludeFiles>
       <Optimization>Os</Optimization>
       <LinkTimeOptimization>true</LinkTimeOptimization>
@@ -134,11 +135,13 @@
     <ClCompile Include="..\CubeMX\Src\stm32f0xx_hal_msp.c" />
     <ClCompile Include="..\CubeMX\Src\stm32f0xx_it.c" />
     <ClCompile Include="..\CubeMX\Src\system_stm32f0xx.c" />
+    <ClCompile Include="..\CubeMX\Src\tim.c" />
     <ClCompile Include="..\CubeMX\Src\usart.c" />
     <ClCompile Include="..\EEPROM\25xx080.cpp" />
     <ClCompile Include="..\EEPROM\crc.c" />
     <ClCompile Include="..\EEPROM\eeprom.cpp" />
     <ClCompile Include="..\EEPROM\hal_spi.cpp" />
+    <ClCompile Include="..\forcefeedback.cpp" />
     <ClCompile Include="..\musia.cpp" />
     <ClCompile Include="..\ps2_poller.cpp" />
     <ClCompile Include="..\ps2_state.cpp" />
@@ -152,6 +155,7 @@
     <ClInclude Include="..\CubeMX\Inc\main.h" />
     <ClInclude Include="..\CubeMX\Inc\stm32f0xx_hal_conf.h" />
     <ClInclude Include="..\CubeMX\Inc\stm32f0xx_it.h" />
+    <ClInclude Include="..\CubeMX\Inc\tim.h" />
     <ClInclude Include="..\CubeMX\Inc\usart.h" />
     <ClInclude Include="..\EEPROM\25xx080.h" />
     <ClInclude Include="..\EEPROM\crc.h" />
@@ -159,6 +163,7 @@
     <ClInclude Include="..\EEPROM\eeprom_layout.h" />
     <ClInclude Include="..\EEPROM\hal_spi.h" />
     <ClInclude Include="..\EEPROM\spi_interface.h" />
+    <ClInclude Include="..\forcefeedback.h" />
     <ClInclude Include="..\ps2_packet.h" />
     <ClInclude Include="..\usbd_pid.h" />
     <ClInclude Include="..\USB\Lib\Inc\hid_usage.h" />
@@ -350,6 +355,6 @@
     <ClInclude Include="..\USB\XPD\xpd_usb.h" />
     <ClInclude Include="..\USB\XPD\xpd_usb_wrapper.h" />
     <ClInclude Include="..\USB\XPD\xpd_utils.h" />
-    <ClCompile Include="$(BSP_ROOT)\STM32F0xxxx\StartupFiles\startup_stm32f072xb.c" />
+    <ClCompile Include="$(BSP_ROOT)\STM32F0xxxx\StartupFiles\startup_stm32f042x6.c" />
   </ItemGroup>
 </Project>
