--- a/firmware/MUSIA/VisualGDB/MUSIA.vcxproj.filters
+++ b/firmware/MUSIA/VisualGDB/MUSIA.vcxproj.filters
@@ -584,7 +584,7 @@
     <ClInclude Include="..\USB\XPD\xpd_utils.h">
       <Filter>USB\XPD</Filter>
     </ClInclude>
-    <ClCompile Include="$(BSP_ROOT)\STM32F0xxxx\StartupFiles\startup_stm32f072xb.c">
+    <ClCompile Include="$(BSP_ROOT)\STM32F0xxxx\StartupFiles\startup_stm32f042x6.c">
       <Filter>Source files\Device-specific files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -648,6 +648,12 @@
     </ClCompile>
     <ClCompile Include="..\bootloader_helper.c">
       <Filter>Source files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\forcefeedback.cpp">
+      <Filter>Source files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\CubeMX\Src\tim.c">
+      <Filter>CubeMX</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -728,6 +734,12 @@
     </ClInclude>
     <ClInclude Include="..\bootloader_helper.h">
       <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\forcefeedback.h">
+      <Filter>Source files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\CubeMX\Inc\tim.h">
+      <Filter>CubeMX</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
