--- a/firmware/MUSIA/VisualGDB/MUSIA.vcxproj
+++ b/firmware/MUSIA/VisualGDB/MUSIA.vcxproj
@@ -355,6 +355,6 @@
     <ClInclude Include="..\USB\XPD\xpd_usb.h" />
     <ClInclude Include="..\USB\XPD\xpd_usb_wrapper.h" />
     <ClInclude Include="..\USB\XPD\xpd_utils.h" />
-    <ClCompile Include="$(BSP_ROOT)\STM32F0xxxx\StartupFiles\startup_stm32f042x6.c" />
+    <ClCompile Include="$(BSP_ROOT)\STM32F0xxxx\StartupFiles\startup_stm32f072xb.c" />
   </ItemGroup>
 </Project>
