--- a/firmware/MUSIA/VisualGDB/MUSIA.vcxproj.filters
+++ b/firmware/MUSIA/VisualGDB/MUSIA.vcxproj.filters
@@ -584,7 +584,7 @@
     <ClInclude Include="..\USB\XPD\xpd_utils.h">
       <Filter>USB\XPD</Filter>
     </ClInclude>
-    <ClCompile Include="$(BSP_ROOT)\STM32F0xxxx\StartupFiles\startup_stm32f042x6.c">
+    <ClCompile Include="$(BSP_ROOT)\STM32F0xxxx\StartupFiles\startup_stm32f072xb.c">
       <Filter>Source files\Device-specific files</Filter>
     </ClCompile>
   </ItemGroup>
