--- a/MUNIA-win/MUNIA/MUNIA.csproj
+++ b/MUNIA-win/MUNIA/MUNIA.csproj
@@ -102,6 +102,9 @@
     <Compile Include="Controllers\BufferedController.cs" />
     <Compile Include="Controllers\IController.cs" />
     <Compile Include="Controllers\MusiaDeviceInfo.cs" />
+    <Compile Include="Util\ColorPickerControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Forms\DevicePicker.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +118,16 @@
       <DependentUpon>MusiaSettingsDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="Controllers\MuniaDeviceInfo.cs" />
+    <Compile Include="Forms\SkinRemapperForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SkinRemapperForm.Designer.cs">
+      <DependentUpon>SkinRemapperForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="skins\ColorRemap.cs" />
+    <Compile Include="Util\ColorDialog2.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Util\ExtensionMethods.cs" />
     <Compile Include="Util\CircularBuffer.cs" />
     <Compile Include="Forms\DelayValuePicker.cs">
@@ -193,6 +206,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MusiaSettingsDialog.resx">
       <DependentUpon>MusiaSettingsDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SkinRemapperForm.resx">
+      <DependentUpon>SkinRemapperForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
