--- a/MUNIA-win/MUNIA/MUNIA.csproj
+++ b/MUNIA-win/MUNIA/MUNIA.csproj
@@ -102,6 +102,12 @@
     <Compile Include="Controllers\BufferedController.cs" />
     <Compile Include="Controllers\IController.cs" />
     <Compile Include="Controllers\MusiaDeviceInfo.cs" />
+    <Compile Include="Forms\RemapManagerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\RemapManagerForm.Designer.cs">
+      <DependentUpon>RemapManagerForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Util\ColorPickerControl.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -207,6 +213,9 @@
     <EmbeddedResource Include="Forms\MusiaSettingsDialog.resx">
       <DependentUpon>MusiaSettingsDialog.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\RemapManagerForm.resx">
+      <DependentUpon>RemapManagerForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\SkinRemapperForm.resx">
       <DependentUpon>SkinRemapperForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -228,6 +237,7 @@
     </EmbeddedResource>
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\MUNIA.Skins.ColorRemap.datasource" />
     <None Include="Resources\notok.png" />
     <None Include="Resources\ok.png" />
   </ItemGroup>
