--- a/MUNIA-win/MUNIA/packages.config
+++ b/MUNIA-win/MUNIA/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="HidSharp" version="2.0.2" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.3.3" targetFramework="net452" />
+  <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.3.3" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="OpenTK" version="1.1.2225.0" targetFramework="net45" />
   <package id="OpenTK.GLControl" version="1.1.1589.5942" targetFramework="net45" />
 </packages>
